--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "type": "module",
   "dependencies": {
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "js-file-download": "^0.4.12"
   }
 }
